Changes for 1.3.9:

 - fixed hitory severity (Eugene)
 - fixed user information displayed (Eugene)
 - fixed logfiles monitoring (Eugene)
 - fixed WEB monitoring (Eugene)
 - fixed SNMP discovery (Alexei)
 - documented use of -vv for zabbix_sender (Alexei)
 - fixed "plain text" and "history of actions" for screens (Eugene)

Changes for 1.3.8:

 - increased server side key length up to 256 (Eugene)
 - fixed active check communication (Eugene)
 - fixed eventlog (Eugene)
 - same step color for both graphs in Monitoring->WEB (Alexei)
 - support of more flexible trigger function count(period,value) (Alexei)
 - finished WEB monitoring (Eugene)
 - changed type of httptest.lastfailedstep to integer (Alexei)
 - added check for a list of status codes for WEB monitoring (Alexei)
 - added acknowledge management for overview screen (Eugene)
 - added default groups for users 'guest' and 'Admin' (Alexei)
 - added http status code configuration for web monitoring (Eugene)
 - new column httpstep.status_codes (Alexei)
 - set DENY permission as default for ZABBIX users (Eugene)
 - fixed Error in "Cancel" after ack of a trigger (Eugene)
 - fixed index.php looping on db connection failing (Eugene)
 - button "Update" renamed to "Refresh" in data export (Alexei)
 - fixed translation behavior for housekeeper configurations (Eugene)
 - fixed time movement for history (Eugene)
 - added availability to yse ')(!' characters in item keys (Eugene)
 - improved management of trigger (Eugene)

Changes for 1.3.7:

 - revision R5 of ZABBIX Manual (Alexei)
 - fixed processing of '-t' and other params when '-c' is not given (Alexei)
 - increased max size of images (Eugene)
 - fixed default data for default host 'ZABBIX-Server' (Alexei)
 - fixed processing of uptime/downtime condition (Alexei)
 - fixed processing of uptime/downtime timestamps for DM (Alexei)
 - fixed support of action "Delete host" (Alexei)
 - added column items.params (Alexei)